<resources>

    <string name="app_name">AppTurnos</string>
    <string name="main_menu_item_salir_label">Salir</string>
    <string name="main_menu_item_ajustes_label">Ajustes</string>
    <string name="main_menu_item_acerca_de_label">Acerca de ...</string>
    <string name="home_no_existen_turnos">No existen turnos cargados.</string>
    <string name="username1">ritchie.marvin</string>
    <string name="password1">2048</string>
    <!--Usuario con mas de 1 afiliacion:-->
    <!--<string name="username2">maxwell.moen</string>-->
    <string name="username2"></string>
    <!--<string name="password2">1168</string>-->
    <string name="password2"></string>


    <string name="wTitulo">Nuevo turno</string>

    <string name="w1Titulo">Nuevo Turno</string>
    <string name="w1Subtitulo"></string>
    <string name="w1Desc">Seleccione la obra social con la que realizara la consulta medica.</string>

    <string name="w2Titulo">Nuevo Turno</string>
    <string name="w2Subtitulo"></string>
    <string name="w2Desc">Seleccione la especialidad que desee y a acontinuación, seleccione un médico.</string>

    <string name="w3Titulo">Nuevo Turno</string>
    <string name="w3Subtitulo"></string>
    <string name="w3Desc">Seleccione un horario para el turno.</string>

    <string name="w4Titulo">Nuevo Turno</string>
    <string name="w4Subtitulo"></string>
    <string name="w4Desc">Revise los datos ingresados y a continuación presione \'Finalizar\' </string>

    <!--Buttons:-->
    <string name="txtBtnSiguiente">Siguiente</string>
    <string name="txtBtnAnterior">Anterior</string>
    <string name="txtBtnFinalizar">Finalizar</string>
    <string name="txtBtnCancelar">Cancelar</string>

    <!--Dialog turno-->
    <string name="dialog_turno_titulo">Más Info</string>
    <string name="dialog_turno_tvFechaLabel_text">Fecha del turno:</string>
    <string name="dialog_turno_text_default">-</string>

    <!--Dialog Acerca de... -->
    <string name="dialog_acerca_de_titulo">Acerca de...</string>
    <string name="dialog_acerca_de_autor_label">Autor:</string>
    <string name="dialog_acerca_de_autor">Emiliano Sangoi</string>
    <string name="dialog_acerca_de_desc_label">Descripción:</string>
    <string name="dialog_acerca_de_desc">Aplicación desarrollada para el curso de Aplicaciones Móviles dictador por el laboratorio Gugler de la Facultad de Ciencia y Tecnología (U.A.D.E.R). </string>
    <string name="dialog_acerca_de_licencia_label">Licencia:</string>
    <string name="dialog_acerca_de_licencia">GPL</string>
    <string name="dialog_acerca_de_repo_label">Repositorio GIT:</string>
    <string name="dialog_acerca_de_repo_link">
        &lt;a href=https://github.com/emiliano-sangoi/app-turnos>Repo en Github&lt;/a>
    </string>

    <!--Visibilidad-->
    <string name="visibilidad_solo_vig">Sólo vigentes</string>
    <string name="visibilidad_solo_vig_code">1</string>
    <string name="visibilidad_no_vig">No vigentes</string>
    <string name="visibilidad_no_vig_code">2</string>
    <string name="visibilidad_todos">Todos</string>
    <string name="visibilidad_todos_code">3</string>

    <!--Orden-->
    <string name="orden_fecha_turno">Fecha turno</string>
    <string name="orden_fecha_turno_code">1</string>
    <string name="orden_cancelados">Cancelados</string>
    <string name="orden_cancelados_code">2</string>
    <string name="orden_finalizados">Finalizados</string>
    <string name="orden_finalizados_code">3</string>
</resources>
